<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="4dp"
    tools:context=".AppActivity">

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toStartOf="@+id/loadButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="201dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:text="@string/reset_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveButton" />

    <Button
        android:id="@+id/loadButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/load_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/saveButton"
        app:layout_constraintTop_toTopOf="@+id/saveButton" />

    <EditText
        android:id="@+id/clerkEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:enabled="false"
        android:hint="@string/clerk_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shopEditText" />

    <EditText
        android:id="@+id/shopEditText"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:ems="10"
        android:hint="@string/shop_hint"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/clerkEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="408dp"
        android:layout_height="0dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resetButton"
        app:layout_constraintVertical_bias="1.0" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="405dp"
        android:layout_height="145dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clerkEditText">

        <RadioButton
            android:id="@+id/preferencesRadioButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:checked="true"
            android:text="@string/rb_preferences" />

        <RadioButton
            android:id="@+id/fileRadioButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rb_file" />

        <RadioButton
            android:id="@+id/databaseRadioButton"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/rb_database" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>